# Thoth

./: CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
docs/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  MANUAL.md
docs/man/: INSTALLATION.md  USAGE.md
example/: example.en.docx  example.en.html  example.en.md  example.nl.docx  example.nl.html  example.nl.md  example.yaml
example/ssd4/: ssd4-00.yaml  ssd4-model.yaml
tests/test__command/test__command__document/test__document__render_document/: test__render_document__determine_format.py  test__render_document__determine_language.py
tests/test__command/test__command__norm/: test__xcheck_norm.py
tests/test__command/test__command__shared/: test__compare_norm_structures.py  test__output_format.py  test__print_changes.py
tests/test__command/test__command__shared/test__print_changes/: test__diff_block.py  test__human_centric_diff.py  test__print_changes.py
tests/test__model/: test__model__multi_language_text.py  test__model__norm.py
tests/test__model/test__mixins/: test__example_mixin.py  test__render_template_mixin.py
tests/test__model/test__model__meta_model/: test__document_meta_model.py  test__document_meta_model_attribute.py
tests/test__model/test__model__norm/: test__model__multi_language_text.py  test__model__norm.py
tests/test__model/test__model__norm/test__model__norm__utils/: test__count_multi_lingual_helper.py
tests/test__model/test__model__norm_profile/: test__model__norm_profile.py
tests/test__model/test__model__profile/: test__model__profile.py
tests/test__model/test__model__utils/: test__count_multi_lingual_helper.py
tests/test__process/test__process__norm/: test__compare_norm_structures.py  test__norm_dimensions.py
tests/test__renderers/test__renderers__html/test__renderers__html__fragments/: test__fragments__common.py  test__fragments__criteria.py  test__fragments__driver.py  test__fragments__drivers.py  test__fragments__indicator.py  test__fragments__indicator_conformities.py  test__fragments__indicators.py
tests/test__templates/test__copy_templates/: test__shared_files.py
tests/test__utils/: test__iso_639.py  test__utils__flatten.py  test__utils__list_joiner.py
thoth/: __init__.py  main.py  thoth.py
thoth/command/: __init__.py  _shared.py  about.py  audience.py  languages.py  lorem_ipsum.py
thoth/command/definition/: __init__.py  new_definition.py
thoth/command/document/: __init__.py  check_document.py  new_document.py  render_document.py
thoth/command/fragments/: __init__.py  check_fragments.py  new_fragments.py
thoth/command/model/: __init__.py  check_model.py  new_model.py
thoth/command/norm/: __init__.py  check_norm.py  join_norm.py  languages_in_norm.py  new_norm.py  reformat_norm.py  render_norm.py  render_norm_old.py  render_translated_norm.py  split_norm.py  update_norm.py  xcheck_norm.py
thoth/command/norm_profile/: new_profile.py
thoth/command/old_norm/: __init__.py  check_norm.py  reformat_norm.py  render_norm.py  split_norm.py  update_norm.py  xcheck_norm.py
thoth/command/old_norm_profile/: __init__.py  reformat_profile.py
thoth/command/profile/: __init__.py  check_profile.py  new_profile.py  reformat_profile.py
thoth/command/render/: __init__.py  render_norm.py  render_translation.py
thoth/command/shared/: arguments_and_options_info.py  audience.py  new_command.py  output_format.py  print_changes.py  print_file_contents_comparison.py  reformat_command.py  suggest_changes_to_original.py  write_output.py
thoth/command/template/: __init__.py  new_template.py
thoth/model/: _language.py  _translation.py  conformity.py  document_model.py  driver.py  fragments.py  indicator.py  meta_model.py  multi_lingual_text.py  norm.py  reference.py
thoth/model/mixins/: __init__.py  example_mixin.py  json_mixin.py  profile_mixin.py  render_template_mixin.py  yaml_mixin.py
thoth/model/norm/: _translation.py  conformity.py  driver.py  indicator.py  multi_lingual_text.py  norm.py  reference.py  utils.py  yaml_layout_enhancer.py  yaml_norm_layout_enhancer.py
thoth/model/norm_definition/: norm.py  utils.py
thoth/model/profile/: document.yaml  profile.py
thoth/process/norm/: compare_norm_structures.py  equalize_norm_structures.py  norm_dimensions.py
thoth/renderers/html/: html_render_norm_page.py  html_render_translation_page.py
thoth/renderers/html/html_norm_fragments/: html_norm.py  html_norm__common.py  html_norm_criteria.py  html_norm_driver.py  html_norm_drivers.py  html_norm_indicator.py  html_norm_indicator_conformities.py  html_norm_indicator_description.py  html_norm_indicator_explanation.py  html_norm_indicators.py  html_norm_intro.py  html_norm_objectives.py  html_norm_reference.py  html_norm_reference_notes.py  html_norm_reference_title.py  html_norm_references.py  html_norm_risks.py  html_norm_scope.py  html_norm_title.py  html_norm_triggers.py  html_styles.py
thoth/templates/: __init__.py  copy_templates.py  template.docx  template.html  template.md  template.txt
thoth/templates/docx/norm/: norm.docx
thoth/templates/html/norm/: example.html  norm-criteria.html  norm-drivers.html  norm-footer.html  norm-identifier-title.html  norm-indicators.html  norm-intro.html  (+7 more)
thoth/utils/: flatten.py  iso_639.py  list_joiner.py  yaml_norm_beautifier.py
(+1 files in other folders)
