[project]
name = "Thoth-dhwtj"
version = "0.2.0"
description = "Maintain the Ma'at of Secure Software Development"
license="Apache-2.0"
authors = [
    {name = "Eric Nieuwland", email = "eric.nieuwland@ictu.nl"},
]
readme = "README.md"
requires-python = ">= 3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: Typer",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
]
dependencies = [
    "docxtpl==0.20.1",
    "Jinja2==3.1.6",
    "pydantic==2.11.7",
    "pyyaml==6.0.2",
    "setuptools==80.8.0",
    "typer-slim==0.16.0",
]

[tool.setuptools.packages.find]
include = [
    "thoth",
    "docs",
    "thoth.*",
]

[tool.setuptools.package-data]
"thoth.templates" = ["**/*.docx", "**/*.html"]

[project.optional-dependencies]
test = [
    "mypy==1.16.1",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "ruff==0.12.1",
]

[project.scripts]
thoth = "thoth.thoth:main"

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.13"
