[build-system]
requires = ["setuptools==80.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Thoth-dhwtj"
version = "0.4.4"
description = "Maintain the Ma'at of Secure Software Development"
license="Apache-2.0"
authors = [
    {name = "Eric Nieuwland", email = "eric.nieuwland@ictu.nl"},
]
readme = "README.md"
requires-python = ">= 3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: Typer",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
]
dependencies = [
    "docxtpl==0.20.1",
    "Jinja2==3.1.6",
    "pydantic==2.12.3",
    "pyyaml==6.0.3",
    "setuptools==80.8.0",
    "typer-slim==0.20.0",
]

[project.optional-dependencies]
dev = [
    "build==1.3.0",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.1",
]

[project.scripts]
thoth = "thoth.main:main"


[tool.setuptools]
packages = [
    "thoth",
    "thoth.templates",
]

[tool.setuptools.package-data]
"thoth" = ["**/*.py"]
"thoth.templates" = ["**/*"]

[tool.setuptools.exclude-package-data]
"thoth.templates" = ["__pycache__/*"]


[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]


[tool.mypy]
python_version = "3.13"
error_summary = false
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true


[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
output-format = "gitlab"
src = ["thoth"]
extend-exclude = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104",  # https://docs.astral.sh/ruff/rules/#pydocstyle-d - don't require doc strings in __init__.py files
    "F401",  # https://docs.astral.sh/ruff/rules/#pyflakes-f - don't complain about unused imports in __init__.py files
]
